Extracted PointerSize